bumping Bootstrap version 4.5.2 and fixing small responsive layout issue

--- a/public/styles/specifications.css
+++ b/public/styles/specifications.css
@@ -50,7 +50,7 @@ th.w-short {
     width: 125px;
 }
 th.w-long {
-    width: 250px;
+    width: 125px;
 }
 
 
@@ -101,7 +101,7 @@ th.w-long {
     border-bottom: 1px solid #123f6d;
 }
 .specs_category_box .component_row .component_cell {
-    width: 135px;
+    width: 100px;
     margin: 0.5rem;
 }
 .specs_category_box .component_row .releases {
@@ -115,7 +115,7 @@ th.w-long {
 }
 .specs_category_box .specs_item {
     /*max-width: 19%;*/
-    min-width: 115px;
+    min-width: 145px;
     min-height: 90px;
     padding: 0.5rem;
     margin: 0.25rem;
@@ -157,4 +157,13 @@ th.w-long {
 }
 #foundations_group .specs_cell {
     background-color: #f3f4f5;
+}
+
+@media (min-width: 768px) {
+    .specs_category_box .component_row .component_cell {
+        width: 135px;
+    }
+    th.w-long {
+        width: 250px;
+    }
 }
